
option java_outer_classname="GetRunningServersCommandProtocol";
package com.alachisoft.tayzgrid.common.protobuf;
message GetRunningServersCommand {
	optional int64 requestId = 1;
	optional string cacheId = 2;
	optional bool isDotnetClient = 3 [default=true];

}