import "ValueWithType.proto";


option java_outer_classname="KeyValueProtocol";
package com.alachisoft.tayzgrid.common.protobuf;

message KeyValue {
	optional string key = 1;
	repeated ValueWithType value = 2;
}